--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -64,7 +64,7 @@
      "metadata": {},
      "level": 2,
      "source": [
-      "Reducing Input Variant Set"
+      "Finding rare variants with Kaviar"
      ]
     },
     {
@@ -100,26 +100,25 @@
      "metadata": {},
      "level": 2,
      "source": [
-      "Annotating with Ensembl"
+      "Adding positional information to the NBS gene list"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "After the initial set of variants was filtered by kaviar frequency, the variants were annotated with ensembl, \n",
-      "returning only variants with ensembl entries, for matching with nbs_gene list. \n",
+      "Chromosome, start and stop positions were added to the NBS Gene list by joining it with the ensembl_genes table using gene name. This resulted in mulitple listings per gene for each exon, allowing for more precise matches. \n",
       "\n",
-      "The ensembl_genes table was subset for only distinct gene names, to avoid duplicated results for every different \n",
-      "transcript and exon of each gene. \n",
+      "        CREATE TABLE users_selasady.nbs_positional AS SELECT nbs.gene, nbs.entrez_gene_id as entrez_id, ens.gene_id AS ensembl_id, \n",
+      "        ens.chromosome as chrom, ens.start, ens.stop, nbs.condition, nbs.omim_phenotype, nbs.va_name, nbs.inheritance, \n",
+      "        nbs.allelic_condition, nbs.in_pgb, nbs.level, ens.feature, ens.transcript_name, ens.transcript_id, ens.exon_number, ens.exon_id, \n",
+      "        ens.gene_biotype, nbs.comments\n",
+      "        FROM users_selasady.nbs_genes nbs\n",
+      "        LEFT JOIN\n",
+      "                 public_hg19.ensembl_genes ens\n",
+      "                ON nbs.gene = ens.gene_name\n",
       "\n",
-      "        CREATE TABLE users_selasady.bv_ensembl AS SELECT DISTINCT bv.sample_id, bv.chr, bv.pos, bv.alt, bv.ref, \n",
-      "         bv.id as rs_id, bv.qual, bv.filter, bv.gt, bv.alle_freq as kav_freq, ens.gene_name, ens.gene_id, ens.feature\n",
-      "         FROM public_hg19.bv_kaviar bv, users_selasady.ensembl_condensed ens\n",
-      "         WHERE bv.chr = ens.chr\n",
-      "         AND bv.pos BETWEEN ens.start and ens.stop\n",
-      "\n",
-      "Results were saved to impala as bv_ens containing 778724 rows. "
+      "The results were saved as users _ selasady.nbs _ ensembl containing 20872 rows. "
      ]
     },
     {
@@ -127,17 +126,49 @@
      "metadata": {},
      "level": 2,
      "source": [
-      "Locate Variants in NBS Gene List"
+      "Locate rare variants in the NBS gene list"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Once the variants were annotated with the ensemble table, gene names were used to match variants to the nbs_genes table. \n",
+      "Next the Kaviar-filtered variants were joined with nbs _ ensembl using chromosome, start and stop positions, returning rare variants in the nbs_gene list, and annotated those with ClinVar. \n",
       "\n",
+      "CREATE TABLE users_selasady.nbs_annotated AS \n",
       "\n",
-      "\n"
+      "WITH nbs AS (\n",
+      "  SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id as rs_id, bv.ref, bv.alt, bv.qual, bv.filter,bv.gt, bv.alle_freq AS kav_freq,\n",
+      "  nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,\n",
+      "  nbs.in_pgb, nbs.level, nbs.feature, nbs.transcript_name, nbs.transcript_id, nbs.exon_number, nbs.exon_id, nbs.gene_biotype, nbs.comments\n",
+      "  FROM public_hg19.bv_kaviar bv, users_selasady.nbs_ensembl nbs\n",
+      "  WHERE bv.chr = nbs.chrom\n",
+      "  AND bv.pos BETWEEN nbs.start and nbs.stop\n",
+      "  )\n",
+      "  \n",
+      "  SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc \n",
+      "  FROM nbs\n",
+      "  LEFT JOIN public_hg19.clinvar clin\n",
+      "      ON nbs.rs_id = clin.id\n",
+      "\n",
+      "6927 rows were returned, the table was saved as users _ selasady.nbs_annotated. "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Add functional annotation"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Coding consequences for each variant were predictedusing ensembl VEP. \n",
+      "\n",
+      "VEP requires input in either VCF format or a tab-delimieted file of chromosomal location and ref and alt alleles. Results from the NBS gene list were read into python. "
      ]
     },
     {
@@ -146,9 +177,35 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      ""
+      "#################\n",
+      "# load modules  #\n",
+      "#################\n",
+      "import pandas as pd\n",
+      "from impala.dbapi import connect\n",
+      "from impala.util import as_pandas\n",
+      "\n",
+      "#create database connection\n",
+      "conn = connect(host='glados19', port=21050)\n",
+      "cur = conn.cursor()\n",
+      "\n",
+      "#########################\n",
+      "# Run Query on Impala ##\n",
+      "#########################\n",
+      "query = \"SELECT * FROM users_selasady.nbs_annotated\"\n",
+      "cur.execute(query)\n",
+      "\n",
+      "#store results as pandas data frame\n",
+      "nbs_df = as_pandas(cur)"
      ],
-     "language": "python"
+     "language": "python",
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The dataframe was separated into mother, father and newborn for downstream analysis. "
+     ]
     },
     {
      "cell_type": "code",
@@ -156,18 +213,135 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "from impala.dbapi import connect\n",
-      "from impala.util import as_pandas\n",
-      "\n",
-      "# create connection to impala database\n",
-      "conn=connect(host='glados19', port=21050)\n",
-      "\n",
-      "# create a cursor object to interact with the db\n",
-      "cur = conn.cursor()\n",
-      "\n",
-      "cur.close()"
+      "newborns = nbs_df[nbs_df['sample_id'].str.endswith('03')]\n",
+      "mothers = nbs_df[nbs_df['sample_id'].str.endswith('01')]\n",
+      "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]"
      ],
-     "language": "python"
+     "language": "python",
+     "prompt_number": 39
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The newborn set was run through VEP (version 81 with reference version homo_sapiens_vep_81_GRCh37), to add annotation on coding consequences. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/Users/selasady/impala_scripts\r\n"
+       ]
+      }
+     ],
+     "input": [
+      ""
+     ],
+     "language": "python",
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Reporting dominant and homozygous recessive variants"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The newborn subset was split into dominant and homozygous recessive disorders and output to tsv files. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "nb_dominant = newborns[(newborns['inheritance'] == 'AD')]\n",
+      "nb_hom_recessive = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '1/1'))]"
+     ],
+     "language": "python",
+     "prompt_number": 45
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Reporting heterozygous recessive variants"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Heterozygous recessive variants were examined for compound heterozygosity and output as a tsv file. \n",
+      "    "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "no\nyes\nno\nno\nyes\nyes\nyes\nno\nno\nyes\nno\nyes\nno\nyes\nno\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nyes"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\nno\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nno\nyes\nyes\nyes\nno\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nno\nyes"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\nno\nno\nyes\nyes\nno\nyes\nyes\nyes\nno\nyes\nyes\nyes\nyes\nyes\nno\nyes\nyes\nyes\nyes\nyes\nno\nyes"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\nyes\nyes\nyes\nno\nyes\nyes\nyes\nyes\nyes\nyes\nno\nyes\nyes\nno\n"
+       ]
+      }
+     ],
+     "input": [
+      "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]\n",
+      "\n",
+      "# group variants by gene name\n",
+      "by_gene = nb_het.groupby('gene')\n",
+      "\n",
+      "for name, group in by_gene:\n",
+      "    #for each gene, if there is a variant at more than one position\n",
+      "    if group.pos.nunique() > 1:\n",
+      "        #search for matching variants from each parent\n",
+      "        if len(mothers[(mothers['gene'].isin(group.gene)) & (mothers['pos'].isin(group.pos))]) > 0 and \\\n",
+      "        len(fathers[((fathers['gene'].isin(group.gene)) & (fathers['pos'].isin(group.pos)))]) > 0:\n",
+      "            print 'yes'\n",
+      "        else:\n",
+      "            print 'no'\n",
+      "       "
+     ],
+     "language": "python",
+     "prompt_number": 79
     },
     {
      "cell_type": "markdown",
