fixed up comp-het function, still waiting on VEP download

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -135,21 +135,21 @@
      "source": [
       "Next the Kaviar-filtered variants were joined with nbs _ ensembl using chromosome, start and stop positions, returning rare variants in the nbs_gene list, and annotated those with ClinVar. \n",
       "\n",
-      "CREATE TABLE users_selasady.nbs_annotated AS \n",
-      "\n",
-      "WITH nbs AS (\n",
-      "  SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id as rs_id, bv.ref, bv.alt, bv.qual, bv.filter,bv.gt, bv.alle_freq AS kav_freq,\n",
-      "  nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,\n",
-      "  nbs.in_pgb, nbs.level, nbs.feature, nbs.transcript_name, nbs.transcript_id, nbs.exon_number, nbs.exon_id, nbs.gene_biotype, nbs.comments\n",
-      "  FROM public_hg19.bv_kaviar bv, users_selasady.nbs_ensembl nbs\n",
-      "  WHERE bv.chr = nbs.chrom\n",
-      "  AND bv.pos BETWEEN nbs.start and nbs.stop\n",
-      "  )\n",
+      "        CREATE TABLE users_selasady.nbs_annotated AS \n",
+      "            WITH nbs AS (\n",
+      "            SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id as rs_id, bv.ref, bv.alt, bv.qual, bv.filter,bv.gt, \n",
+      "            bv.alle_freq AS kav_freq,nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, nbs.omim_phenotype, \n",
+      "            nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, nbs.level, nbs.feature, \n",
+      "            nbs.transcript_name, nbs.transcript_id, nbs.exon_number, nbs.exon_id, nbs.gene_biotype, nbs.comments\n",
+      "            FROM public_hg19.bv_kaviar bv, users_selasady.nbs_ensembl nbs\n",
+      "            WHERE bv.chr = nbs.chrom\n",
+      "            AND bv.pos BETWEEN nbs.start and nbs.stop\n",
+      "            )\n",
       "  \n",
-      "  SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc \n",
-      "  FROM nbs\n",
-      "  LEFT JOIN public_hg19.clinvar clin\n",
-      "      ON nbs.rs_id = clin.id\n",
+      "           SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc \n",
+      "           FROM nbs\n",
+      "           LEFT JOIN public_hg19.clinvar clin\n",
+      "               ON nbs.rs_id = clin.id\n",
       "\n",
       "6927 rows were returned, the table was saved as users _ selasady.nbs_annotated. "
      ]
@@ -198,7 +198,7 @@
       "nbs_df = as_pandas(cur)"
      ],
      "language": "python",
-     "prompt_number": 23
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -218,33 +218,25 @@
       "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]"
      ],
      "language": "python",
-     "prompt_number": 39
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The newborn set was run through VEP (version 81 with reference version homo_sapiens_vep_81_GRCh37), to add annotation on coding consequences. "
+      "The newborn set was annotated with coding consequences for rows containing rsID's, using ensembl's VEP version 81 for grch37 (ftp://ftp.ensembl.org/pub/release-81/variation/VEP/homo_sapiens_vep_81_GRCh37.tar.gz) "
      ]
     },
     {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "/Users/selasady/impala_scripts\r\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       ""
      ],
      "language": "python",
-     "prompt_number": 36
+     "prompt_number": 71
     },
     {
      "cell_type": "heading",
@@ -271,7 +263,7 @@
       "nb_hom_recessive = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '1/1'))]"
      ],
      "language": "python",
-     "prompt_number": 45
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -298,56 +290,57 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "no\nyes\nno\nno\nyes\nyes\nyes\nno\nno\nyes\nno\nyes\nno\nyes\nno\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nyes"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\nno\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nno\nyes\nyes\nyes\nno\nyes\nyes\nyes\nyes\nyes\nyes\nyes\nno\nyes"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\nno\nno\nyes\nyes\nno\nyes\nyes\nyes\nno\nyes\nyes\nyes\nyes\nyes\nno\nyes\nyes\nyes\nyes\nyes\nno\nyes"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\nyes\nyes\nyes\nno\nyes\nyes\nyes\nyes\nyes\nyes\nno\nyes\nyes\nno\n"
+        "    sample_id_x chrom        pos rs_id_x    ref alt  qual_x      filter_x  \\\n0  102-07009-03     2  211539204    None  AAACC   A  639.00          PASS   \n1  102-07009-03     2  211539204    None  AAACC   A  639.00          PASS   \n2  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n3  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n4  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n5  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n6  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n7  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n8  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n9  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n\n  gt_x  kav_freq_x   ...    transcript_name    transcript_id exon_number  \\\n0  0/1    0.000059   ...           CPS1-004  ENST00000479988           1   \n1  0/1    0.000059   ...           CPS1-004  ENST00000479988           1   \n2  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n3  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n4  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n5  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n6  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n7  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n8  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n9  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n\n           exon_id    gene_biotype comments clin_hgvs clin_sig clin_dbn  \\\n0  ENSE00001836494  protein_coding               None     None     None   \n1  ENSE00001836494  protein_coding               None     None     None   \n2  ENSE00001451905  protein_coding               None     None     None   \n3  ENSE00001451905  protein_coding               None     None     None   \n4  ENSE00001451905  protein_coding               None     None     None   \n5  ENSE00001451905  protein_coding               None     None     None   \n6  ENSE00001451905  protein_coding               None     None     None   \n7  ENSE00001451905  protein_coding               None     None     None   \n8  ENSE00001451905  protein_coding               None     None     None   \n9  ENSE00001451905  protein_coding               None     None     None   \n\n  clin_acc  \n0     None  \n1     None  \n2     None  \n3     None  \n4     None  \n5     None  \n6     None  \n7     None  \n8     None  \n9     None  \n\n[10 rows x 85 columns]\n"
        ]
       }
      ],
      "input": [
+      "# subset het newborns\n",
       "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]\n",
       "\n",
-      "# group variants by gene name\n",
-      "by_gene = nb_het.groupby('gene')\n",
+      "# merge het newborns with matching variants from mother and father\n",
+      "# parent variants will only be included if they match with a newborn variant\n",
+      "nb_and_mom = pd.merge(nb_het, mothers, on=['chrom', 'pos', 'ref', 'alt'], how='inner')\n",
+      "trio = pd.merge(nb_and_mom, fathers, on=['chrom', 'pos', 'ref', 'alt'], how='inner')\n",
       "\n",
-      "for name, group in by_gene:\n",
-      "    #for each gene, if there is a variant at more than one position\n",
-      "    if group.pos.nunique() > 1:\n",
-      "        #search for matching variants from each parent\n",
-      "        if len(mothers[(mothers['gene'].isin(group.gene)) & (mothers['pos'].isin(group.pos))]) > 0 and \\\n",
-      "        len(fathers[((fathers['gene'].isin(group.gene)) & (fathers['pos'].isin(group.pos)))]) > 0:\n",
-      "            print 'yes'\n",
-      "        else:\n",
-      "            print 'no'\n",
-      "       "
+      "# group variants by gene name\n",
+      "# by_gene = trio.groupby('gene')\n",
+      "\n",
+      "# comp_hets = []\n",
+      "# \n",
+      "# \n",
+      "# for name, group in by_gene:\n",
+      "#     #for each gene, if there is a nb variant at more than on position\n",
+      "#     if group[(group['sample_id'].str.endswith('03'))].pos.nunique() > 1:\n",
+      "#         # # pull out mom and dad positions\n",
+      "#         # mom_pos = group[(group['sample_id'].str.endswith('01'))].pos \n",
+      "#         # dad_pos = group[(group['sample_id'].str.endswith('02'))].pos\n",
+      "#         # # if there are variants from each parent\n",
+      "#         # if len(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos) > 0) & \\\n",
+      "#         #         len(dad_pos.isin(group[(group['sample_id'].str.endswith('02'))].pos) > 0):\n",
+      "#         #     # and those variants are not the same\n",
+      "#         #     if len(mom_pos[(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))] -\n",
+      "#         #     dad_pos[(dad_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))]) > 0:\n",
+      "#         #         #add that gene to comp_hets list\n",
+      "#                 comp_hets.append(group)\n",
+      "\n",
+      "print trio.head(10)"
      ],
      "language": "python",
-     "prompt_number": 79
+     "prompt_number": 162
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       ""
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To DO: rename columns in merged data frame"
      ]
     }
    ]
