Added script to convert tsv to vcf Added function to run VEP Updated comp_het function, finished changing colnames and re-run to verify

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -211,20 +211,30 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "       sample_id chrom       pos      rs_id ref alt  qual             filter  \\\n8   102-00932-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n9   102-00932-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n10  102-00932-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n23  102-00961-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n24  102-00961-03    14  36986022  rs5807883  CA   C  9.00  LowGQX;HighREFREP   \n\n     gt  kav_freq    ...    transcript_name    transcript_id exon_number  \\\n8   0/1  0.004525    ...         NKX2-1-004  ENST00000518149           3   \n9   0/1  0.004525    ...         NKX2-1-001  ENST00000498187           2   \n10  0/1  0.004525    ...         NKX2-1-002  ENST00000354822           3   \n23  0/1  0.004525    ...         NKX2-1-004  ENST00000518149           3   \n24  0/1  0.004525    ...         NKX2-1-001  ENST00000498187           2   \n\n            exon_id    gene_biotype comments clin_hgvs clin_sig clin_dbn  \\\n8   ENSE00001954071  protein_coding               None     None     None   \n9   ENSE00002356545  protein_coding               None     None     None   \n10  ENSE00002375051  protein_coding               None     None     None   \n23  ENSE00001954071  protein_coding               None     None     None   \n24  ENSE00002356545  protein_coding               None     None     None   \n\n   clin_acc  \n8      None  \n9      None  \n10     None  \n23     None  \n24     None  \n\n[5 rows x 31 columns]\n"
+       ]
+      }
+     ],
      "input": [
       "newborns = nbs_df[nbs_df['sample_id'].str.endswith('03')]\n",
       "mothers = nbs_df[nbs_df['sample_id'].str.endswith('01')]\n",
-      "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]"
+      "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]\n",
+      "\n",
+      "print newborns.head()"
      ],
      "language": "python",
-     "prompt_number": 3
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The newborn set was annotated with coding consequences for rows containing rsID's, using ensembl's VEP version 81 for grch37 (ftp://ftp.ensembl.org/pub/release-81/variation/VEP/homo_sapiens_vep_81_GRCh37.tar.gz) "
+      "The newborn set was out to Plink's tab2vcf script and annotated with coding consequences for rows containing rsID's, using ensembl's VEP version 81 for grch37 (ftp://ftp.ensembl.org/pub/release-81/variation/VEP/homo_sapiens_vep_81_GRCh37.tar.gz) "
      ]
     },
     {
@@ -233,10 +243,26 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      ""
+      "import vcf\n",
+      "\n",
+      "# output columns to vcf file using a modified version of anntools tab2vcf.py\n",
+      "nb_to_vcf = newborns[['chrom','pos', 'ref', 'alt', 'qual', 'filter','rs_id', 'sample_id', 'gt','gene']]\n",
+      "#rename rsid column\n",
+      "nb_to_vcf = nb_to_vcf.rename(columns = {'rs_id':'id'})\n",
+      "#add unique variant id to rows that have no rsid\n",
+      "nb_to_vcf['id'].fillna(nb_to_vcf.apply(lambda x:'{}:{}:{}:{}'.format(x['chrom'],x['pos'], x['ref'], x['alt']),axis=1), inplace=True)\n",
+      "\n",
+      "# write to file for conversion to vcf\n",
+      "nb_to_vcf.to_csv('{}/newborns.tsv'.format(os.getcwd()), header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
+      "\n",
+      "# run tab2vcf.py script\n",
+      "!/Users/selasady/impala_scripts/tab2vcf.py /Users/selasady/impala_scripts/newborns.tsv\n",
+      "\n",
+      "# feed vcf file to VEP\n",
+      "!perl /Users/selasady/tools/ensembl-tools-release-81/scripts/variant_effect_predictor/variant_effect_predictor.pl -i /Users/selasady/impala_scripts/newborns.tsv.vcf --cache --port 3337"
      ],
      "language": "python",
-     "prompt_number": 71
+     "prompt_number": 178
     },
     {
      "cell_type": "heading",
@@ -263,7 +289,7 @@
       "nb_hom_recessive = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '1/1'))]"
      ],
      "language": "python",
-     "prompt_number": 4
+     "prompt_number": 110
     },
     {
      "cell_type": "heading",
@@ -287,10 +313,15 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "    sample_id_x chrom        pos rs_id_x    ref alt  qual_x      filter_x  \\\n0  102-07009-03     2  211539204    None  AAACC   A  639.00          PASS   \n1  102-07009-03     2  211539204    None  AAACC   A  639.00          PASS   \n2  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n3  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n4  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n5  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n6  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n7  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n8  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n9  102-07005-03     1  100654909    None      A   T  104.00  HighDPFRatio   \n\n  gt_x  kav_freq_x   ...    transcript_name    transcript_id exon_number  \\\n0  0/1    0.000059   ...           CPS1-004  ENST00000479988           1   \n1  0/1    0.000059   ...           CPS1-004  ENST00000479988           1   \n2  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n3  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n4  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n5  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n6  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n7  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n8  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n9  0/1    0.001548   ...            DBT-001  ENST00000370132          11   \n\n           exon_id    gene_biotype comments clin_hgvs clin_sig clin_dbn  \\\n0  ENSE00001836494  protein_coding               None     None     None   \n1  ENSE00001836494  protein_coding               None     None     None   \n2  ENSE00001451905  protein_coding               None     None     None   \n3  ENSE00001451905  protein_coding               None     None     None   \n4  ENSE00001451905  protein_coding               None     None     None   \n5  ENSE00001451905  protein_coding               None     None     None   \n6  ENSE00001451905  protein_coding               None     None     None   \n7  ENSE00001451905  protein_coding               None     None     None   \n8  ENSE00001451905  protein_coding               None     None     None   \n9  ENSE00001451905  protein_coding               None     None     None   \n\n  clin_acc  \n0     None  \n1     None  \n2     None  \n3     None  \n4     None  \n5     None  \n6     None  \n7     None  \n8     None  \n9     None  \n\n[10 rows x 85 columns]\n"
+       "ename": "AttributeError",
+       "evalue": "'DataFrame' object has no attribute 'str'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+        "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-113-901bafbff359>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mby_gene\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m#for each gene, if there is a nb variant at more than on position\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sample_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'03'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m         \u001b[0;31m# # pull out mom and dad positions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;31m# mom_pos = group[(group['sample_id'].str.endswith('01'))].pos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/pandas/core/generic.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1834\u001b[0m         \"\"\"\n\u001b[1;32m   1835\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_internal_names_set\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1836\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1837\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1838\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'str'"
        ]
       }
      ],
@@ -299,35 +330,41 @@
       "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]\n",
       "\n",
       "# merge het newborns with matching variants from mother and father\n",
-      "# parent variants will only be included if they match with a newborn variant\n",
+      "# to get dataframe of newborn variants that are potential comp_het\n",
       "nb_and_mom = pd.merge(nb_het, mothers, on=['chrom', 'pos', 'ref', 'alt'], how='inner')\n",
       "trio = pd.merge(nb_and_mom, fathers, on=['chrom', 'pos', 'ref', 'alt'], how='inner')\n",
       "\n",
+      "#rename columns in merged table\n",
+      "#change 'pos' colname to 'start'\n",
+      "trio = trio.rename(columns = {'sample_id_x':'sample_id', 'rs_id_x':'rs_id', 'qual_x':'qual',\n",
+      "                              'filter_x':'filter', 'gt_x':'gt', 'kav_freq_x':'kav_freq'\n",
+      "                              })\n",
+      "\n",
       "# group variants by gene name\n",
-      "# by_gene = trio.groupby('gene')\n",
+      "by_gene = trio.groupby('gene')\n",
       "\n",
-      "# comp_hets = []\n",
-      "# \n",
-      "# \n",
-      "# for name, group in by_gene:\n",
-      "#     #for each gene, if there is a nb variant at more than on position\n",
-      "#     if group[(group['sample_id'].str.endswith('03'))].pos.nunique() > 1:\n",
-      "#         # # pull out mom and dad positions\n",
-      "#         # mom_pos = group[(group['sample_id'].str.endswith('01'))].pos \n",
-      "#         # dad_pos = group[(group['sample_id'].str.endswith('02'))].pos\n",
-      "#         # # if there are variants from each parent\n",
-      "#         # if len(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos) > 0) & \\\n",
-      "#         #         len(dad_pos.isin(group[(group['sample_id'].str.endswith('02'))].pos) > 0):\n",
-      "#         #     # and those variants are not the same\n",
-      "#         #     if len(mom_pos[(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))] -\n",
-      "#         #     dad_pos[(dad_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))]) > 0:\n",
-      "#         #         #add that gene to comp_hets list\n",
-      "#                 comp_hets.append(group)\n",
+      "comp_hets = []\n",
       "\n",
-      "print trio.head(10)"
+      "\n",
+      "for name, group in by_gene:\n",
+      "    #for each gene, if there is a nb variant at more than on position\n",
+      "    if group[(group['sample_id'].str.endswith('03'))].pos.nunique() > 1:\n",
+      "        # # pull out mom and dad positions\n",
+      "        # mom_pos = group[(group['sample_id'].str.endswith('01'))].pos \n",
+      "        # dad_pos = group[(group['sample_id'].str.endswith('02'))].pos\n",
+      "        # # if there are variants from each parent\n",
+      "        # if len(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos) > 0) & \\\n",
+      "        #         len(dad_pos.isin(group[(group['sample_id'].str.endswith('02'))].pos) > 0):\n",
+      "        #     # and those variants are not the same\n",
+      "        #     if len(mom_pos[(mom_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))] -\n",
+      "        #     dad_pos[(dad_pos.isin(group[(group['sample_id'].str.endswith('03'))].pos))]) > 0:\n",
+      "        #         #add that gene to comp_hets list\n",
+      "                comp_hets.append(group)\n",
+      "\n",
+      "print comp_hets"
      ],
      "language": "python",
-     "prompt_number": 162
+     "prompt_number": 113
     },
     {
      "cell_type": "markdown",
